--- a/app/views/stnormal_view.html
+++ b/app/views/stnormal_view.html
@@ -4,7 +4,7 @@
     </div>
     <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 alt-espacamento-top">
         <div class="row vertical-center-row">
-            <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#STProprioModal">ST Próprio</button>
+            <button id="btnSt" type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#STProprioModal">ST Próprio</button>
             <br>
             <button type="button" class="btn btn btn-default btn-lg btn-block" ng-click="controlst.voltar()">Voltar</button>
         </div>
@@ -16,64 +16,64 @@
                     <div class="modal-content">
                         <div class="modal-header alt-cor-principal">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">ST Próprio</h4>   
+                            <h4 class="modal-title">ST Próprio</h4>
                         </div>
                         <div class="modal-body alt-overflow-hidden">
                             <form name="StProprioForm">
-                                <div class="col-sm-6 col-xs-12">                               
+                                <div class="col-sm-6 col-xs-12">
                                     <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoBase(), 'has-success': controlst.valoresStProprio.validacaoBase()}">
                                         <label class="help-block" for="lbBaseStProprio">Base Cálculo <font size="1">sem IPI</font></label>
-                                        <input type="number" ng-model="controlst.valoresStProprio.base" class="form-control">
-                                        <span class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoBase()">Valor inválido!</span>     
+                                        <input id="baseStProprio" type="number" ng-model="controlst.valoresStProprio.base" class="form-control">
+                                        <span id="spanBaseStProprio" class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoBase(controlst.valoresStProprio.base)">Valor inválido!</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-xs-12">
-                                    <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.ipi), 'has-success':controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.ipi)}">    
+                                    <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoIpi(controlst.valoresStProprio.ipi), 'has-success':controlst.valoresStProprio.validacaoIpi(controlst.valoresStProprio.ipi)}">
                                         <label class="help-block" for="lbValorIpiStProprio">IPI</label>
-                                        <input type="number" ng-model="controlst.valoresStProprio.ipi" class="form-control" id="valorIpiStProprio"/>
-                                        <span class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.ipi)">Valor inválido!</span>
+                                        <input id="ipiStProprio" type="number" ng-model="controlst.valoresStProprio.ipi" class="form-control" id="valorIpiStProprio"/>
+                                        <span id="spanIpiStProprio" class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoIpi(controlst.valoresStProprio.ipi)">Valor inválido!</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-4 col-xs-12">
-                                    <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterna), 'has-success': controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterna)}">    
+                                    <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterna), 'has-success': controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterna)}">
                                         <label class="help-block" for="lbAliquotaInternaStPropria">Alíq. Interna</label>
                                         <div class="input-group">
-                                            <input type="number" ng-model="controlst.valoresStProprio.aliquotaInterna" class="form-control"/>
+                                            <input id="aliqInternaStProprio" type="number" ng-model="controlst.valoresStProprio.aliquotaInterna" class="form-control"/>
                                             <span class="input-group-addon" id="percent-addon">%</span>
                                         </div>
-                                        <span class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterna)">Valor inválido!</span>
+                                        <span id="spanAliqInternaStProprio" class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterna)">Valor inválido!</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-4 col-xs-12">
-                                    <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterestadual) || !controlst.valoresStProprio.validacaoAliquotaInterestadual(), 'has-success': controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterestadual)}">    
+                                    <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterestadual) || !controlst.valoresStProprio.validacaoAliquotaInterestadual(), 'has-success': controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterestadual)}">
                                         <label class="help-block" for="lbAliquotaInterestStPropria">Alíq. Interestad.</label>
                                         <div class="input-group">
-                                            <input type="number" ng-model="controlst.valoresStProprio.aliquotaInterestadual" class="form-control"/>
+                                            <input id="aliqInterestStProprio" type="number" ng-model="controlst.valoresStProprio.aliquotaInterestadual" class="form-control"/>
                                             <span class="input-group-addon" id="percent-addon">%</span>
                                         </div>
-                                        <span class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterestadual) || !controlst.valoresStProprio.validacaoAliquotaInterestadual()">Valor inválido!</span>
+                                        <span id="spanAliqInterestStProprio" class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoAliquotaNaoAceitaZero(controlst.valoresStProprio.aliquotaInterestadual) || !controlst.valoresStProprio.validacaoAliquotaInterestadual()">Valor inválido!</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-4 col-xs-12">
-                                    <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.mva), 'has-success': controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.mva)}">    
+                                    <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.mva), 'has-success': controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.mva)}">
                                         <label class="help-block" for="lbMva">Alíq. MVA</label>
                                         <div class="input-group">
-                                            <input type="number" ng-model="controlst.valoresStProprio.mva" class="form-control">
+                                            <input id="aliqMvaStProprio" type="number" ng-model="controlst.valoresStProprio.mva" class="form-control">
                                             <span class="input-group-addon" id="percent-addon">%</span>
                                         </div>
-                                        <span class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.mva)">Valor inválido!</span>
-                                    </div>
-                                </div>                    
-                                <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <button type="button" class="btn btn-nmain btn-block" ng-click="controlst.valoresStProprio.calcular()" ng-disabled="!controlst.valoresStProprio.isValid()">Calcular</button>
+                                        <span id="spanAliqMvaStProprio" class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoAliquotaAceitaZero(controlst.valoresStProprio.mva)">Valor inválido!</span>
                                     </div>
                                 </div>
                                 <div class="col-xs-12">
-                                    <div class="form-group">    
+                                    <div class="form-group">
+                                        <button id="btnIcmsStProprio" type="button" class="btn btn-nmain btn-block" ng-click="controlst.valoresStProprio.calcular()" ng-disabled="!controlst.valoresStProprio.isValid()">Calcular</button>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12">
+                                    <div class="form-group">
                                         <a title="Discriminação" data-toggle="collapse" data-target="#discriminacaoSt" class="fa fa-question-circle-o pull-right help-discriminacao"></a>
                                         <label class="help-block" for="lbValorStProprio">Valor ST</label>
-                                        <pre ng-bind="controlst.valoresStProprio.valorSt | currency"></pre>
+                                        <pre id="resultStProprio" ng-bind="controlst.valoresStProprio.valorSt | currency"></pre>
                                     </div>
                                 </div>
                                 <div class="col-xs-12">
@@ -85,7 +85,7 @@
                                             <div class="panel-body">
                                                 <center>
                                                 <h6>(Base ICMS [Desconsiderar IPI])*(Al.Interest.) = (ICMS)</h6>
-                                                <h5>{{controlst.valoresStProprio.base}}*{{controlst.valoresStProprio.aliquotaInterest}} = {{controlst.valoresStProprio.valorIcms}}</h5>                                                
+                                                <h5>{{controlst.valoresStProprio.base}}*{{controlst.valoresStProprio.aliquotaInterest}} = {{controlst.valoresStProprio.valorIcms}}</h5>
                                                 <h6>(Base ICMS [Considera IPI])*(1+(MVA/100)) = (Base ST)</h6>
                                                 <h5>{{controlst.valoresStProprio.baseStIpi}}*(1+({{controlst.valoresStProprio.mva}}/100)) = {{controlst.valoresStProprio.baseSt}}</h5>
                                                 <h6>(Base ST)*(Al.Interna/100) - (ICMS) = (ST)</h6>
