--- a/app/views/calculoicms_view.html
+++ b/app/views/calculoicms_view.html
@@ -1,10 +1,10 @@
-<body>
+<div>
     <div class="alt-titulo-view-container">
         <p id="tituloIcms" class="alt-titulo-view">ICMS</p>
     </div>
     <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 alt-espacamento-top">
         <div class="row vertical-center-row">
-            <button type="button" id="btnProprio" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#icmsProprioModal">ICMS Próprio</button>
+            <button type="button" id="btnProprio" class="btn btn-primary btn-lg btn-block" ng-click="controlicms.criar();">ICMS Próprio</button>
             <button type="button" id="btnRed" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#icmsRedModal">Redução de Base</button>
             <button type="button" id="btnDifal" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#icmsDifalModal">DIFAL</button>
             <br>
@@ -12,70 +12,7 @@
         </div>
     </div>
 
-    <!-- ICMS Próprio Modal Início -->
-<div class="container">
-    <div id="icmsProprioModal" class="modal fade" role="dialog" tabindex="-1">
-        <div class="modal-dialog modal-pequeno">
-            <div class="modal-content">
-                <div class="modal-header alt-cor-principal">
-                    <button id="xIcmsProprio" type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 id="nomeModalIcmsProprio" class="modal-title">ICMS Próprio</h4>
-                </div>
-                <div class="modal-body alt-overflow-hidden">
-                    <form name="icmsProprioForm">
-                      <div class="col-sm-6 col-xs-12">
-                            <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsProprio.validacaoBase(), 'has-success':controlicms.valoresIcmsProprio.validacaoBase()}">
-                                <label id="labelBaseIcmsProprio" class="help-block" for="lbBaseCalculoProprio">Base Cálculo</label>
-                                <input id="baseIcmsProprio" type="number" ng-model="controlicms.valoresIcmsProprio.base" name="baseIcmsProprio" class="form-control" required/>
-                                <span id="spanBaseIcmsProprio" class="help-block msg" ng-show="!controlicms.valoresIcmsProprio.validacaoBase()">Valor inválido!</span>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-xs-12">
-                            <div class="form-group" ng-class="{'has-error': !controlicms.valoresIcmsProprio.validacaoAliquotaNaoAceitaZero(), 'has-success':controlicms.valoresIcmsProprio.validacaoAliquotaNaoAceitaZero()}">
-                                <label id="labelAliqIcmsProprio" class="help-block" for="tbAliquotaIcmsProprio">Alíquota ICMS</label>
-                                <div class="input-group">
-                                    <input id="aliqIcmsProprio" type="number" ng-model="controlicms.valoresIcmsProprio.aliquota" class="form-control" name="aliquotaIcmsProprio" required/>
-                                    <span class="input-group-addon" id="percent-addon">%</span>
-                                </div>
-                                <span id="spanAliqIcmsProprio" class="help-block msg" ng-show="!controlicms.valoresIcmsProprio.validacaoAliquotaNaoAceitaZero()">Valor inválido!</span>
-                            </div>
-                        </div>
-                        <div class="col-xs-12">
-                            <div class="form-group">
-                              <button id="btnIcmsProprio" type="button" class="btn btn-nmain btn-block" ng-click="controlicms.valoresIcmsProprio.calcular()" ng-disabled="!controlicms.valoresIcmsProprio.isValid()">Calcular</button>
-                            </div>
-                            <a id="discrimIcmsProprio" title="Discriminação" data-toggle="collapse" data-target="#discriminacao" class="fa fa-question-circle-o pull-right help-discriminacao"></a>
-                            <label id="labelValorIcmsProprio" class="help-block" for="tbValorIcmsProprio">Valor ICMS</label>
-                            <pre id="resultIcmsProprio" ng-bind="controlicms.valoresIcmsProprio.valor | currency"></pre>
-                        </div>
-                        <div class="col-xs-12">
-                            <div id="discriminacao" class="collapse">
-                                <div class="panel panel-primary">
-                                    <div id="tituloPanelDiscrim" class="panel-heading">Discriminação Cálculo
-                                      <button type="button" class="close" data-toggle="collapse" data-target="#discriminacao">&times;</button>
-                                    </div>
-                                    <div class="panel-body">
-                                    <center>
-                                    (Base de calculo) * (Alíquota de ICMS)/100
-                                    <br></br>
-                                    {{controlicms.valoresIcmsProprio.base | currency: 'R$':3}} * {{controlicms.valoresIcmsProprio.aliquota}}/100 = {{controlicms.valoresIcmsProprio.valorDiscriminacao | currency: 'R$':3}}
-                                    </center>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <a id="btnLimparIcmsProprio" type="button" class="btn btn-default" ng-click="controlicms.limparProprio()">Limpar</a>
-                    <a id="btnFecharModalIcmsProprio" type="button" class="btn btn-default" data-dismiss="modal">Fechar</a>
-                </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-    <!-- ICMS Próprio Modal Final -->
+    <div icms-proprio-modal-opener></div>
 
     <!-- Red. Base ICMS Modal Início -->
             <div class="container">
@@ -257,4 +194,4 @@
                 </div>
             </div>
     <!-- ICMS DIFAL Modal Final -->
-</body>
+</div>
